# docs/swagger.json
@@ -1,9 +1,57 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "This is a sample server.",
+        "title": "Real world API",
+        "contact": {
+            "name": "Developer",
+            "url": "https://github.com/pavelkozlov",
+            "email": "it.pavelkozlov@gmail.com"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
+        "version": "1.0"
     },
+    "host": "localhost:8080",
+    "basePath": "/api/v1",
     "paths": {
+        "/api/user": {
+            "get": {
+                "description": "Returns a User that's the current user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Get Current User",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.profileResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/api.errorWrapper"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.errorWrapper"
+                        }
+                    }
+                }
+            }
+        },
         "/api/users/login": {
             "post": {
                 "description": "Allow user to get access token",
@@ -16,7 +64,7 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "Authentication for user",
+                "summary": "Authentication",
                 "parameters": [
                     {
                         "description": "authenticationRequest",
@@ -32,7 +80,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.authenticationResponse"
+                            "$ref": "#/definitions/api.authResponse"
                         }
                     },
                     "422": {
@@ -62,7 +110,7 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "Registration for user",
+                "summary": "Registration",
                 "parameters": [
                     {
                         "description": "registrationRequest",
@@ -78,7 +126,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.authenticationResponse"
+                            "$ref": "#/definitions/api.authResponse"
                         }
                     },
                     "422": {
@@ -98,6 +146,14 @@
         }
     },
     "definitions": {
+        "api.authResponse": {
+            "type": "object",
+            "properties": {
+                "user": {
+                    "$ref": "#/definitions/api.userResponse"
+                }
+            }
+        },
         "api.authenticationRequest": {
             "type": "object",
             "required": [
@@ -109,26 +165,6 @@
                     "type": "string"
                 },
                 "password": {
-                    "type": "string"
-                }
-            }
-        },
-        "api.authenticationResponse": {
-            "type": "object",
-            "properties": {
-                "bio": {
-                    "type": "string"
-                },
-                "email": {
-                    "type": "string"
-                },
-                "image": {
-                    "type": "string"
-                },
-                "token": {
-                    "type": "string"
-                },
-                "username": {
                     "type": "string"
                 }
             }
@@ -152,6 +188,31 @@
                 }
             }
         },
+        "api.profile": {
+            "type": "object",
+            "properties": {
+                "bio": {
+                    "type": "string"
+                },
+                "following": {
+                    "type": "boolean"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "api.profileResponse": {
+            "type": "object",
+            "properties": {
+                "profile": {
+                    "$ref": "#/definitions/api.profile"
+                }
+            }
+        },
         "api.registrationRequest": {
             "type": "object",
             "required": [
@@ -170,6 +231,31 @@
                     "type": "string"
                 }
             }
+        },
+        "api.userResponse": {
+            "type": "object",
+            "properties": {
+                "bio": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "token": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "BasicAuth": {
+            "type": "basic"
         }
     }
 }
