# internal/user/transport/http/responses.go
@@ -6,11 +6,22 @@ import (
 	"net/http"
 )
 
-type singleResponse struct {
-	User authenticationResponse `json:"user"`
+type profileResponse struct {
+	Profile profile `json:"profile"`
 }
 
-type authenticationResponse struct {
+type profile struct {
+	Username  string `json:"username"`
+	Bio       string `json:"bio"`
+	Image     string `json:"image"`
+	Following bool   `json:"following"`
+}
+
+type authResponse struct {
+	User userResponse `json:"user"`
+}
+
+type userResponse struct {
 	Email    string `json:"email"`
 	Token    string `json:"token"`
 	Username string `json:"username"`
